feat: Add Japanese localization and AI service enhancements
- Introduced Japanese localization for the landing page (ja.json) to support Japanese-speaking users.
- Implemented AiLanguageContext to manage thread-scoped language settings for AI responses.
- Created AiModelPricing to manage pricing for AI models based on token usage.
- Added AiRestTemplates for shared RestTemplate configurations with timeouts for AI provider clients.
- Developed Japanese prompt templates for AI interactions (prompts_ja.properties).
- Added SQL migration script to enhance component metadata with descriptions, homepages, and source repository URLs.
- Updated vendor versions for frontend dependencies.